fix safari overflow

--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -18,8 +18,10 @@
   height: 0px;
 
   position: absolute;
+
   left: 50%;
   width: 160vw;
+  overflow-x: hidden;
   border-radius: 50%;
   background: inherit;
   transform: translateX(-50%) translateY(50%);
